up to get highest column index